--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ python3 = true
 pipInstall = ["requirements.txt"]
 
 [start]
-cmd = "gunicorn --bind 0.0.0.0:8000 app:app"
+cmd = "gunicorn --bind 0.0.0.0:8000 run:app"
